@@ -131,6 +131,39 @@ EOF
   (assert (not (output-port-open? p)))
   (assert (= n 1)))
 
+;; bidirectional ports
+
+(let* ((b (string))
+       (w (lambda (s)
+	    (set! b (string-append b s))))
+       (e (lambda ()
+	    (positive? (string-length b))))
+       (r (lambda ()
+	    (let ((s b))
+	      (set! b (substring s 1))
+	      (string-ref s 0))))
+       (i (make-input-port r e void))
+       (o (make-output-port w void))
+       (p (make-bidirectional-port i o)))
+  (assert (input-port? p))
+  (assert (output-port? p))
+  (assert (input-port-open? p))
+  (assert (output-port-open? p))
+  (display "quartz ruby" p)
+  (newline p)
+  (assert (equal? (read p) 'quartz))
+  (assert (equal? (read i) 'ruby))
+  (display "emerald topaz" p)
+  (newline p)
+  (close-output-port p)
+  (assert (not (output-port-open? o)))
+  (assert (not (output-port-open? p)))
+  (assert (equal? (read p) 'emerald))
+  (assert (equal? (read i) 'topaz))
+  (close-input-port p)
+  (assert (not (input-port-open? i)))
+  (assert (not (input-port-open? p))))
+
 ;; fill buffers
 (with-input-from-file "compiler.scm" read-string)
 
